<resources>
    <string name="app_name">Boletim Integral</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="user">user</string>
    <string name="username">userName</string>
    <string name="add_message">adicionar mensagem</string>
    <string name="label_add_message">Adicione uma Mensagem</string>
    <string name="escreva_a_mensagem">Mensagem</string>
    <string name="assunto_da_mensagem">Assunto</string>
    <string name="cadaster">Cadastro</string>
    <string name="descriptio_add_email">Adicionar Email</string>
    <string name="hint_add_email">Adicione o Email</string>
    <string name="add_password">Adicionar senha</string>
    <string name="adicionar_senha">Adicionar senha</string>
    <string name="add_name">Nome</string>
    <string name="adicione_telefones">Adicione telefones</string>
    <string name="title_core">NÚCLEO ZONA NOROESTE 1</string>
    <string name="password">senha</string>
    <string name="email">email</string>
    <string name="frase">Como você está hoje?</string>
    <string name="tv_email">aaaaaaaaaaa@hotmail.com</string>
    <string name="registro_de_filhos_matriculado">Registro de Filhos Matriculado</string>
    <string name="info_fbAddStudent">Adicione dados de um aluno</string>
    <string name="boletim">Boletim</string>
    <string name="integral">Integral</string>
    <string name="lastName">Sobrenome</string>
    <string name="data_person">Datos Pessoais</string>
    <string name="heloo">Olá %s</string>
    <string name="first_name">Primeiro nome</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sair_do_app">Sair do App</string>
    <string name="exit_to_app">Sair do aplicativo</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar_informa_es_do_perfil">Editar informações do perfil</string>
    <string name="liberar_acesso">Liberar Acesso</string>
    <string name="liberar_acesso_a_usu_rios">Liberar acesso a usuários</string>
    <string name="adicionar_aluno">Adicionar aluno</string>
    <string name="acessselected">AcessSelected</string>
    <string name="leonardo_nunes_manh">Leonardo Nunes - Manhã</string>
    <string name="leonardo_nunes_tarde">Leonardo Nunes - Tarde</string>
    <string name="bernal_manh">Bernal - Manhã</string>
    <string name="bernal_tarde">Bernal - Tarde</string>
    <string name="controle_de_acesso">Controle de acesso</string>
    <string name="editar_controle">Editar Controle</string>
    <string name="coordinator">Coordenador</string>
    <string name="professor">Professor</string>
    <string name="controle_de_acesso_as_mensagens">Controle de Acesso as Mensagens</string>
    <string name="leonardo_manh">Leonardo - Manhã</string>
    <string name="leonardo_tarde">Leonardo - Tarde</string>
    <string name="usu_rio">Usuário</string>
    <string name="bloqueado">Bloqueado</string>
    <string name="add_student">Adicione informações do Aluno</string>
    <string name="send">Enviar</string>
</resources>