<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:background="@color/black_green">


    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_response"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/color_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/color_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/background_response"
        app:layout_constraintEnd_toEndOf="@id/edtName"
        app:layout_constraintStart_toStartOf="@id/edtName"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <Button
        android:id="@+id/btnToEnter"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:text="Entrar"
        android:textSize="23sp"
        android:backgroundTint="@color/green"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <Button
        android:id="@+id/btn_cadaster"
        android:text="Cadastrar"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/transparent"
        android:textColorLink="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToEnter" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/boletim"
        android:fontFamily="@font/architects_daughter"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="55sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_core"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/integral"
        android:layout_marginTop="-30dp"
        android:fontFamily="@font/architects_daughter"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />



</androidx.constraintlayout.widget.ConstraintLayout>
